force-app/main/default/objects/Application__c/fields/Program_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Program_of_Interest__c</fullName>
    <label>Program of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Business Administration</fullName>
            </value>
            <value>
                <fullName>Fine Arts</fullName>
            </value>
            <value>
                <fullName>Mechanical Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>