force-app/main/default/objects/Application__c/fields/Requires_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Requires_Follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Follow-up</label>
    <type>Checkbox</type>
</CustomField>