force-app/main/default/objects/Application__c/recordTypes/Graduate_Admission.recordType-meta.xml
<RecordType>
    <fullName>Graduate_Admission</fullName>
    <active>true</active>
    <label>Graduate Admission</label>
</RecordType>