force-app/main/default/objects/Application__c/recordTypes/Undergraduate_Admission.recordType-meta.xml
<RecordType>
    <fullName>Undergraduate_Admission</fullName>
    <active>true</active>
    <label>Undergraduate Admission</label>
</RecordType>