force-app/main/default/objects/Application__c/validationRules/Program_of_Interest_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_of_Interest_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT( Program_of_Interest__c ) )</errorConditionFormula>
    <errorMessage>You must select a Program of Interest before submitting an application.</errorMessage>
</ValidationRule>